--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -103,6 +103,21 @@ body {
 .item div.created-time {
   padding:0 10px;
 }
+.item div.likes , .item div.comment{
+  padding:0 10px;
+  background-color: rgb(63, 63, 63);
+  color: #888;
+  margin-bottom: 5px;
+}
+.item div.likes span{
+  color: #888;
+  font-size: 12px;
+}
+.item div.comment img{
+  margin: 0;
+  margin-right: 10px;
+  border-radius: 50%;
+}
 #items{
   display: table;
   margin-top: 100px;
