--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -4,9 +4,9 @@
   color: #000;
   padding: 0.2em 0;
 }
-.container{
+/*.container{
   width: 100%;
-}
+}*/
 html,body{
   font-family: 'RobotoDraft', sans-serif !important;
 }
@@ -15,6 +15,7 @@ body {
   padding: 0;
   margin: 0;
   background: rgb(100, 100, 100);
+  /*overflow-y:hidden;*/
   /*overflow: hidden;*/
 }
 
@@ -184,7 +185,7 @@ body {
   left:0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 1);
   display: none;
   z-index: 9999;
 }
